# qappwrite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  qappwrite.pro
generator/: pom.xml
generator/src/main/java/io/protone/qappwrite/codegen/: QAppWriteGenerator.java
generator/src/main/resources/: appwrite.yaml  appwrite.yaml.full
generator/src/main/resources/qappwrite/: CMakeLists.txt.mustache  HttpFileElement.cpp.mustache  HttpFileElement.h.mustache  HttpRequest.cpp.mustache  Project.mustache  README.mustache  api-body.mustache  api-header.mustache  globalExport-header.mustache  helpers-body.mustache  helpers-header.mustache  model-body.mustache  model-header.mustache
generator/src/test/java/io/protone/qappwrite/codegen/: QAppWriteGeneratorTest.java
src/: AWClient.pri  AWEnum.h  AWHelpers.cpp  AWHelpers.h  AWHttpFileElement.cpp  AWHttpFileElement.h  AWHttpRequest.cpp  AWHttpRequest.h  AWOauth.cpp  AWOauth.h  AWObject.h  AWServerConfiguration.h  AWServerVariable.h
src/api/: AWAccountApi.cpp  AWAccountApi.h  AWAvatarsApi.cpp  AWAvatarsApi.h  AWDatabasesApi.cpp  AWDatabasesApi.h  AWFunctionsApi.cpp  AWFunctionsApi.h  AWGraphqlApi.cpp  AWGraphqlApi.h  AWLocaleApi.cpp  AWLocaleApi.h  AWStorageApi.cpp  AWStorageApi.h  AWTeamsApi.cpp  AWTeamsApi.h
src/model/: AWAccountCreateEmailSessionRequest.cpp  AWAccountCreateEmailSessionRequest.h  AWAccountCreateMagicURLSessionRequest.cpp  AWAccountCreateMagicURLSessionRequest.h  AWAccountCreatePhoneSessionRequest.cpp  AWAccountCreatePhoneSessionRequest.h  AWAccountCreateRecoveryRequest.cpp  AWAccountCreateRecoveryRequest.h  AWAccountCreateRequest.cpp  AWAccountCreateRequest.h  AWAccountCreateVerificationRequest.cpp  AWAccountCreateVerificationRequest.h  AWAccountUpdateEmailRequest.cpp  AWAccountUpdateEmailRequest.h  AWAccountUpdateMagicURLSessionRequest.cpp  AWAccountUpdateMagicURLSessionRequest.h  AWAccountUpdateNameRequest.cpp  AWAccountUpdateNameRequest.h  AWAccountUpdatePasswordRequest.cpp  AWAccountUpdatePasswordRequest.h  AWAccountUpdatePhoneRequest.cpp  AWAccountUpdatePhoneRequest.h  AWAccountUpdatePhoneSessionRequest.cpp  AWAccountUpdatePhoneSessionRequest.h  AWAccountUpdatePhoneVerificationRequest.cpp  AWAccountUpdatePhoneVerificationRequest.h  AWAccountUpdatePrefsRequest.cpp  AWAccountUpdatePrefsRequest.h  AWAccountUpdateRecoveryRequest.cpp  AWAccountUpdateRecoveryRequest.h  AWAccountUpdateVerificationRequest.cpp  AWAccountUpdateVerificationRequest.h  AWAlgoArgon2.cpp  AWAlgoArgon2.h  AWAlgoBcrypt.cpp  AWAlgoBcrypt.h  AWAlgoMd5.cpp  AWAlgoMd5.h  AWAlgoPhpass.cpp  AWAlgoPhpass.h  (+86 more)
